Closed Bug 1021277 Opened 10 years ago Closed 10 years ago

JIT pseudostack frames do not have copy flag set

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: jchen, Assigned: jchen)

References

Details

Attachments

(1 file)

JIT pseudostack frames have non-static labels and should have the copy flag set.
Fix the line number for the entry frame and fix the copy flags for the two JIT frames.
Attachment #8435265 - Flags: review?(vporof)
Comment on attachment 8435265 [details] [diff] [review]
Use copy flag for JIT pseudostack frames (v1)

This looks ok to me, but Kannan would be a better reviewer for this.
Can you please explaing why these need to have the copy label set *now*? Did they have the copy label set before and bug 1004726 regressed this?
Attachment #8435265 - Flags: review?(vporof) → review?(kvijayan)
(In reply to Victor Porof [:vporof][:vp] from comment #2)
> Comment on attachment 8435265 [details] [diff] [review]
> Use copy flag for JIT pseudostack frames (v1)
> 
> This looks ok to me, but Kannan would be a better reviewer for this.
> Can you please explaing why these need to have the copy label set *now*? Did
> they have the copy label set before and bug 1004726 regressed this?

Right. The flag used to be a "no copy" flag and it was *not* set. Now it's a "copy" flag and it should be set.
IMO the current "copy" flag is more clear than before. We just have to be careful to set it :)
Attachment #8435265 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/mozilla-central/rev/bebb2a8b8f83
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: