Bug 1021277 - Use copy flag for JIT pseudostack frames; r=djvj